--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="allcontent">
-        <h1>vm</h1>
+        <h1>veemee.es</h1>
         <div id="recordingtimestamp">2:30</div>
         <canvas id="canvasss" width="250" height="50"></canvas>
         <div id="controls">
