--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="allcontent">
-        <h1>veemee.es</h1>
-        <div id="recordingtimestamp">2:30</div>
+        <h1>veemee!</h1>
         <canvas id="canvasss" width="250" height="50"></canvas>
         <div id="controls">
+        <div id="recordingtimestamp">2:30</div>
             <button id="recordButton">record</button>
             <button id="pauseButton">pause</button>
             <button id="stopButton">finish & upload</button>
