--- a/templates/view.html
+++ b/templates/view.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="allcontent">
-        <h1>veemee.es</h1>
+        <h1>veemee!</h1>
         <div id="controls">
             <button id="restartButton">restart</button>
             <button id="playPauseButton">playpause</button>
