--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" translate="no">
 
 <head>
+    <meta name="google" content="notranslate">
     <meta charset="UTF-8">
-    <title>veemee!</title>
+    <title>veemee</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/static/css/all.css">
 </head>
 
 <body>
-    <div class="allcontent">
-        <h1>veemee!</h1>
-        <canvas id="canvasss" width="250" height="50"></canvas>
-        <div id="controls">
-        <div id="recordingtimestamp">2:30</div>
-            <button id="recordButton">record</button>
-            <button id="pauseButton">pause</button>
-            <button id="stopButton">finish & upload</button>
+    <div class="wrapper">
+        <div class="headerConfines">
+            <h1>veemee</h1>
         </div>
-        <div id="uploadingDiv">uploading...</div>
-        <div id="successDiv">uploaded!<br>share this link:<br><br><a id="linkidDiv"></a><br><br><button onclick="share()">send veemee</button></div>
+        <div class="allcontent">
+            <div class="contentArea">
+                <div class="contentBit">
+                    <canvas class="waveformCanvas" id="canvasss" width="250" height="50"></canvas>
+                    <br>
+                    <div id="uploadingDiv">uploading...</div>
+                    <div id="successDiv">uploaded!<br>share this link:
+                        <br><br>
+                        <a id="linkidDiv"></a>
+                        <br><br>
+                        <button onclick="share()">send veemee</button>
+                    </div>
+                </div>
+            </div>
+            <div class="bottombar">
+                <div class="row">
+                    <div class="column">&nbsp;</div>
+                    <div class="column">&nbsp;<button id="recordButton">record</button>
+                        <button id="pauseButton">pause</button>
+                    </div>
+                    <div class="column">&nbsp;<button id="stopButton">-></button>
+                    </div>
+                </div>
+                <div class="timestampArea">
+                    <div id="recordingtimestamp">2:30</div>
+                </div>
+            </div>
+        </div>
+        <div class="trailing">&nbsp;</div>
     </div>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script src="/static/js/app.js"></script>
