--- a/templates/view.html
+++ b/templates/view.html
@@ -10,19 +10,31 @@
 </head>
 
 <body>
-    <div class="allcontent">
-        <h1>veemee!</h1>
-        <div id="controls">
-            <button id="restartButton">restart</button>
-            <button id="playPauseButton">playpause</button>
-            <span id="timestamp">2:30</span>
+    <div class="wrapper">
+        <div class="headerConfines">
+            <h1>veemee</h1>
         </div>
-        <div class="transcriptBit">
-            <br>
-            <div class="transcriptSection" id="transcriptSection"></div>
-            <center>
-                <button class="newvm" onclick="replyButton()">send new vm</button>
-            </center>
+        <div class="allcontent">
+            <div class="contentArea">
+                <div class="contentBit">
+                    <div class="transcriptSection" id="transcriptSection"></div>
+                </div>
+            </div>
+            <div class="bottombar">
+                <div class="row">
+                    <div class="column">&nbsp;<button class="newvm" onclick="replyButton()">new</button>
+
+                    </div>
+                    <div class="column">&nbsp;
+                    </div>
+                    <div class="column">
+                        <button id="playPauseButton">playpause</button>
+                    </div>
+                </div>
+                <div class="timestampArea">
+                    <span id="timestamp">2:30</span>
+                </div>
+            </div>
         </div>
     </div>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
