--- a/templates/view.html
+++ b/templates/view.html
@@ -22,8 +22,8 @@
             </div>
             <div class="bottombar">
                 <div class="row">
-                    <div class="column">&nbsp;<button class="newvm" onclick="replyButton()">new</button>
-
+                    <div class="column">&nbsp;
+                        <button class="newvm" onclick="replyButton()">new</button>
                     </div>
                     <div class="column">&nbsp;
                     </div>
