--- a/static/css/all.css
+++ b/static/css/all.css
@@ -58,6 +58,7 @@ body {
     text-align: center;
 }
 
+
 /* Clear floats after the columns */
 .row:after {
     content: "";
@@ -77,9 +78,13 @@ h1 {
     color: white;
 }
 
+.noShowOnLoad{
+	display: none;
+}
+
 .allcontent {
     flex-grow: 1;
-    width: 400px;
+    width: 300px;
     margin: auto;
     max-height: 600px;
     display: flex;
