--- a/static/css/all.css
+++ b/static/css/all.css
@@ -17,11 +17,11 @@ body {
 
 
 .headerConfines {
-    width: 100%;
+/*    width: 100%;*/
     text-align: left;
     margin: auto;
-    width: 400px;
-    max-height: 200px;
+    max-width: 400px;
+    max-height: 100px;
 }
 
 .contentBit {
@@ -75,7 +75,7 @@ body {
 }
 
 h1 {
-    color: white;
+    color: rgb(82, 107, 170);
 }
 
 .noShowOnLoad{
