--- a/templates/view.html
+++ b/templates/view.html
@@ -36,6 +36,7 @@
                 </div>
             </div>
         </div>
+        <div class="trailing">&nbsp;</div>
     </div>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script src="/static/js/view.js"></script>
