--- a/static/css/all.css
+++ b/static/css/all.css
@@ -10,7 +10,7 @@ body {
 .wrapper {
     display: flex;
     flex-direction: column;
-    width: 450px;
+    max-width: 450px;
     height: 100%;
     margin: auto;
 }
