slightly better UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
         <div class="allcontent">
             <div class="contentArea">
                 <div class="contentBit">
-                    <canvas class="waveformCanvas" id="canvasss" width="250" height="200"></canvas>
+                    <canvas class="waveformCanvas" id="canvasss" width="200" height="200"></canvas>
                     <br>
                     <div id="resArea" class="noShowOnLoad">
                         <div id="uploadingDiv">uploading...</div>
@@ -42,8 +42,7 @@
             <div class="bottombar">
                 <div class="row">
                     <div class="column">&nbsp;</div>
-                    <div class="column">&nbsp;<button id="recordButton">record</button>
-                        <button id="pauseButton" class="noShowOnLoad">pause</button>
+                    <div class="column">&nbsp;<button id="recordButton">record</button> <button id="pauseButton" class="noShowOnLoad">pause</button>
                     </div>
                     <div class="column">&nbsp;<button id="stopButton" class="noShowOnLoad">-></button>
                     </div>
@@ -52,8 +51,8 @@
                     <div id="recordingtimestamp">- / -</div>
                 </div>
             </div>
+            <div>&nbsp;</div>
         </div>
-        <div class="trailing">&nbsp;</div>
     </div>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script src="/static/js/app.js"></script>
