--- a/static/css/all.css
+++ b/static/css/all.css
@@ -3,14 +3,15 @@ body {
     background: rgb(62, 97, 150);
     font-family: Sans-Serif;
     height: 100%;
-    margin: 0;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 0px;
 }
 
 
 .wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 450px;
     height: 100%;
     margin: auto;
 }
@@ -18,9 +19,8 @@ body {
 
 .headerConfines {
 /*    width: 100%;*/
-    text-align: left;
-    margin: auto;
-    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 100px;
 }
 
@@ -84,12 +84,10 @@ h1 {
 
 .allcontent {
     flex-grow: 1;
-    width: 300px;
     margin: auto;
-    max-height: 600px;
     display: flex;
+    min-width: 60%;
     flex-direction: column;
-
 }
 
 .transcriptSection {
