--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <div class="bottombar">
                 <div class="row">
                     <div class="column">&nbsp;</div>
-                    <div class="column">&nbsp;<button id="recordButton">record</button> <button id="pauseButton" class="noShowOnLoad">pause</button>
+                    <div class="columnCenter"><button id="recordButton">record</button> <button id="pauseButton" class="noShowOnLoad">pause</button>
                     </div>
                     <div class="column">&nbsp;<button id="stopButton" class="noShowOnLoad">-></button>
                     </div>
