adding send new after you finish veemee"

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,10 @@
             <div class="bottombar">
                 <div class="row">
                     <div class="column">&nbsp;</div>
-                    <div class="columnCenter"><button id="recordButton">record</button> <button id="pauseButton" class="noShowOnLoad">pause</button>
+                    <div class="columnCenter">
+                        <button id="recordButton">record</button>
+                        <button id="pauseButton" class="noShowOnLoad">pause</button>
+                        <button id="newveemee" class="noShowOnLoad">new</button>
                     </div>
                     <div class="column">&nbsp;<button id="stopButton" class="noShowOnLoad">-></button>
                     </div>
