--- a/static/css/all.css
+++ b/static/css/all.css
@@ -24,6 +24,10 @@ body {
     max-height: 100px;
 }
 
+.resArea{
+    min-width: 200px;
+}
+
 .contentBit {
     margin: auto;
     text-align: center;
