--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,15 @@
     }
     </script>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3WGXBSG9J7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3WGXBSG9J7');
+</script>
+
 
 <body>
     <div class="wrapper">
