--- a/templates/view.html
+++ b/templates/view.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" type="text/css" href="/static/css/all.css">
 </head>
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3WGXBSG9J7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3WGXBSG9J7');
+</script>
+
 <body>
     <div class="wrapper">
         <div class="headerConfines">
